crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__const_referencing_const.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Const
- Ident: BASE
- Colon
- U32
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "4"
    suffix: ~
- Newline
- Const
- Ident: DOUBLE
- Colon
- U32
- Eq
- Ident: BASE
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Const
- Ident: MAX
- Colon
- U32
- Eq
- Ident: DOUBLE
- Plus
- Ident: BASE
- Newline
