crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__deeply_nested_types.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Type
- Ident: A
- Eq
- Question
- Star
- Mut
- Question
- Star
- LBracket
- Question
- I32
- Semicolon
- IntegerLiteral:
    base: Decimal
    digits: "4"
    suffix: ~
- RBracket
- Newline
- Type
- Ident: B
- Eq
- Star
- Mut
- Star
- Mut
- Star
- Mut
- U8
- Newline
- Type
- Ident: C
- Eq
- Question
- Star
- Question
- Star
- Question
- Star
- U8
- Newline
