crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__nested_structs.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Struct
- Ident: Inner
- Newline
- Indent
- Ident: x
- Colon
- I32
- Newline
- Dedent
- Struct
- Ident: Outer
- Newline
- Indent
- Ident: inner
- Colon
- Ident: Inner
- Newline
- Dedent
- Struct
- Ident: DeepNest
- Newline
- Indent
- Ident: outer
- Colon
- Ident: Outer
- Newline
- Dedent
